--- a/urbansound_data.ipynb
+++ b/urbansound_data.ipynb
@@ -19,7 +19,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 56,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -30,6 +30,7 @@
     "import librosa\n",
     "import math\n",
     "import json\n",
+    "import numpy as np\n",
     "\n",
     "DATASET_PATH = \"urbansound_reduced\"  # in the video, the files are music files\n",
     "JASON_PATH = \"data.json\""
@@ -37,7 +38,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 57,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -46,8 +47,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
-   "metadata": {},
+   "execution_count": 3,
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [
     {
      "data": {
@@ -156,7 +159,7 @@
        "4  children_playing  "
       ]
      },
-     "execution_count": 5,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -167,7 +170,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -222,7 +225,7 @@
        "7660  7383-3-0-0.wav  7383  3.9021  7.9021         1     1        3  dog_bark"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -355,7 +358,35 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "slice_file_name    873\n",
+       "fsID               134\n",
+       "start              488\n",
+       "end                506\n",
+       "salience             2\n",
+       "fold                 1\n",
+       "classID             10\n",
+       "class               10\n",
+       "dtype: int64"
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "metadata.loc[metadata[\"fold\"]==1].nunique()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -382,10 +413,9 @@
    "source": [
     "import librosa.display\n",
     "import matplotlib.pyplot as plt\n",
-    "import numpy as np\n",
     "\n",
     "#waveform,   sr * T => 22050 * 30,  sr=sampling rate\n",
-    "filepath = f\"{DATASET_PATH}/fold1/{filename}\"\n",
+    "filepath = f\"{DATASET_PATH}/audio/fold1/{filename}\"\n",
     "signal, sr = librosa.load(filepath, sr=22050)\n",
     "\n",
     "print(\"Converted Sample Rate : \", sr)\n",
@@ -435,7 +465,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 75,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -475,11 +505,11 @@
     "                    start_sample = num_samples_per_segment * s\n",
     "                    finish_sample = start_sample + num_samples_per_segment\n",
     "                    \n",
-    "                    print(\"start sample\", start_sample)\n",
-    "                    print(\"finish sampel\", finish_sample)\n",
+    "                    #print(\"start sample\", start_sample)\n",
+    "                    #print(\"finish sampel\", finish_sample)\n",
     "                    if len(signal) < finish_sample:\n",
-    "                        print(\"short signal\")\n",
-    "                        print(filepath)\n",
+    "                        #print(\"short signal\")\n",
+    "                        #print(filepath)\n",
     "                        break\n",
     "                        \n",
     "                    mfcc = librosa.feature.mfcc(signal[start_sample:finish_sample],\n",
@@ -489,19 +519,19 @@
     "                                                hop_length=hop_length)\n",
     "\n",
     "                    mfcc = mfcc.T # transpose\n",
-    "                    print(len(mfcc))\n",
+    "                    print(np.shape(mfcc))\n",
     "                    if len(mfcc) ==  expected_num_mfcc_vectors_per_segment:\n",
     "                        data[\"class\"].append(excerpt[\"class\"].values.tolist())\n",
     "                        data[\"mfcc\"].append(mfcc.tolist())\n",
     "                        data[\"classID\"].append(excerpt[\"classID\"].values.tolist())\n",
     "    \n",
-    "    with open(json_path, \"w\") as fp:\n",
-    "        json.dump(data, fp, indent=4)\n"
+    "   # with open(json_path, \"w\") as fp:\n",
+    "    #    json.dump(data, fp, indent=4)\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 76,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
@@ -510,79 +540,94 @@
      "text": [
       "expected number of mfcc vectors per segment: 44\n",
       "urbansound_reduced/audio/fold2/4911-3-0-0.wav\n",
-      "start sample 0\n",
-      "finish sampel 22050\n",
-      "short signal\n",
-      "urbansound_reduced/audio/fold2/4911-3-0-0.wav\n",
-      "urbansound_reduced/audio/fold2/4201-3-1-0.wav\n",
-      "start sample 0\n",
-      "finish sampel 22050\n",
-      "short signal\n",
       "urbansound_reduced/audio/fold2/4201-3-1-0.wav\n",
       "urbansound_reduced/audio/fold2/4201-3-3-0.wav\n",
-      "start sample 0\n",
-      "finish sampel 22050\n",
-      "start sample 22050\n",
-      "finish sampel 44100\n",
-      "short signal\n",
-      "urbansound_reduced/audio/fold2/4201-3-3-0.wav\n",
-      "urbansound_reduced/audio/fold2/4201-3-2-0.wav\n",
-      "start sample 0\n",
-      "finish sampel 22050\n",
-      "short signal\n",
+      "(44, 13)\n",
       "urbansound_reduced/audio/fold2/4201-3-2-0.wav\n",
       "urbansound_reduced/audio/fold2/4201-3-0-0.wav\n",
-      "start sample 0\n",
-      "finish sampel 22050\n",
-      "short signal\n",
-      "urbansound_reduced/audio/fold2/4201-3-0-0.wav\n",
       "urbansound_reduced/audio/fold1/7061-6-0-0.wav\n",
-      "start sample 0\n",
-      "finish sampel 22050\n",
-      "start sample 22050\n",
-      "finish sampel 44100\n",
-      "start sample 44100\n",
-      "finish sampel 66150\n",
-      "short signal\n",
-      "urbansound_reduced/audio/fold1/7061-6-0-0.wav\n",
-      "urbansound_reduced/audio/fold1/9031-3-1-0.wav\n",
-      "start sample 0\n",
-      "finish sampel 22050\n",
-      "short signal\n",
+      "(44, 13)\n",
+      "(44, 13)\n",
       "urbansound_reduced/audio/fold1/9031-3-1-0.wav\n",
       "urbansound_reduced/audio/fold1/7383-3-0-0.wav\n",
-      "start sample 0\n",
-      "finish sampel 22050\n",
-      "start sample 22050\n",
-      "finish sampel 44100\n",
-      "start sample 44100\n",
-      "finish sampel 66150\n",
-      "start sample 66150\n",
-      "finish sampel 88200\n",
+      "(44, 13)\n",
+      "(44, 13)\n",
+      "(44, 13)\n",
+      "(44, 13)\n",
       "urbansound_reduced/audio/fold1/7383-3-0-1.wav\n",
-      "start sample 0\n",
-      "finish sampel 22050\n",
-      "start sample 22050\n",
-      "finish sampel 44100\n",
-      "start sample 44100\n",
-      "finish sampel 66150\n",
-      "start sample 66150\n",
-      "finish sampel 88200\n",
+      "(44, 13)\n",
+      "(44, 13)\n",
+      "(44, 13)\n",
+      "(44, 13)\n",
       "urbansound_reduced/audio/fold1/7383-3-1-0.wav\n",
-      "start sample 0\n",
-      "finish sampel 22050\n",
-      "start sample 22050\n",
-      "finish sampel 44100\n",
-      "start sample 44100\n",
-      "finish sampel 66150\n",
-      "start sample 66150\n",
-      "finish sampel 88200\n"
+      "(44, 13)\n",
+      "(44, 13)\n",
+      "(44, 13)\n",
+      "(44, 13)\n"
      ]
     }
    ],
    "source": [
     "save_urban_mfcc(DATASET_PATH+\"/audio\", JASON_PATH, num_segments=4)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "  mfcc0 double precision,\n",
+      "  mfcc1 double precision,\n",
+      "  mfcc2 double precision,\n",
+      "  mfcc3 double precision,\n",
+      "  mfcc4 double precision,\n",
+      "  mfcc5 double precision,\n",
+      "  mfcc6 double precision,\n",
+      "  mfcc7 double precision,\n",
+      "  mfcc8 double precision,\n",
+      "  mfcc9 double precision,\n",
+      "  mfcc10 double precision,\n",
+      "  mfcc11 double precision,\n",
+      "  mfcc12 double precision,\n",
+      "  mfcc13 double precision,\n",
+      "  mfcc14 double precision,\n",
+      "  mfcc15 double precision,\n",
+      "  mfcc16 double precision,\n",
+      "  mfcc17 double precision,\n",
+      "  mfcc18 double precision,\n",
+      "  mfcc19 double precision,\n",
+      "  mfcc20 double precision,\n",
+      "  mfcc21 double precision,\n",
+      "  mfcc22 double precision,\n",
+      "  mfcc23 double precision,\n",
+      "  mfcc24 double precision,\n",
+      "  mfcc25 double precision,\n",
+      "  mfcc26 double precision,\n",
+      "  mfcc27 double precision,\n",
+      "  mfcc28 double precision,\n",
+      "  mfcc29 double precision,\n",
+      "  mfcc30 double precision,\n",
+      "  mfcc31 double precision,\n",
+      "  mfcc32 double precision,\n",
+      "  mfcc33 double precision,\n",
+      "  mfcc34 double precision,\n",
+      "  mfcc35 double precision,\n",
+      "  mfcc36 double precision,\n",
+      "  mfcc37 double precision,\n",
+      "  mfcc38 double precision,\n",
+      "  mfcc39 double precision,\n",
+      "  mfcc40 double precision,\n",
+      "  mfcc41 double precision,\n",
+      "  mfcc42 double precision,\n",
+      "  mfcc43 double precision,\n"
+     ]
+    }
+   ],
+   "source": []
   },
   {
    "cell_type": "code",
@@ -594,9 +639,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python [conda env:PythonData] *",
+   "display_name": "Python 3.6.10 64-bit ('PythonData': conda)",
    "language": "python",
-   "name": "conda-env-PythonData-py"
+   "name": "python361064bitpythondatacondac32fb4695c664fa9afac8681922271ab"
   },
   "language_info": {
    "codemirror_mode": {
