--- a/urbansound_train.ipynb
+++ b/urbansound_train.ipynb
@@ -16,7 +16,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -28,7 +28,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -49,7 +49,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -60,7 +60,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -85,7 +85,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -124,7 +124,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -132,114 +132,114 @@
      "output_type": "stream",
      "text": [
       "Epoch 1/50\n",
-      "1/1 [==============================] - 0s 232ms/step - loss: 119.0680 - accuracy: 0.0000e+00 - val_loss: 40.9384 - val_accuracy: 0.2000\n",
+      "1/1 [==============================] - 0s 211ms/step - loss: 104.4140 - accuracy: 0.0000e+00 - val_loss: 78.5176 - val_accuracy: 0.0000e+00\n",
       "Epoch 2/50\n",
-      "1/1 [==============================] - 0s 38ms/step - loss: 57.6060 - accuracy: 0.0000e+00 - val_loss: 4.2467 - val_accuracy: 0.6000\n",
+      "1/1 [==============================] - 0s 33ms/step - loss: 52.6589 - accuracy: 0.0000e+00 - val_loss: 45.6308 - val_accuracy: 0.2000\n",
       "Epoch 3/50\n",
-      "1/1 [==============================] - 0s 31ms/step - loss: 10.7521 - accuracy: 0.5000 - val_loss: 4.2035 - val_accuracy: 0.8000\n",
+      "1/1 [==============================] - 0s 28ms/step - loss: 14.0677 - accuracy: 0.3000 - val_loss: 26.5708 - val_accuracy: 0.6000\n",
       "Epoch 4/50\n",
-      "1/1 [==============================] - 0s 31ms/step - loss: 0.3169 - accuracy: 0.9000 - val_loss: 5.9273 - val_accuracy: 0.8000\n",
+      "1/1 [==============================] - 0s 33ms/step - loss: 2.6484 - accuracy: 0.9000 - val_loss: 22.3184 - val_accuracy: 0.8000\n",
       "Epoch 5/50\n",
-      "1/1 [==============================] - 0s 39ms/step - loss: 0.0021 - accuracy: 1.0000 - val_loss: 8.0071 - val_accuracy: 0.8000\n",
+      "1/1 [==============================] - 0s 31ms/step - loss: 1.9300 - accuracy: 0.9000 - val_loss: 22.6890 - val_accuracy: 0.8000\n",
       "Epoch 6/50\n",
-      "1/1 [==============================] - 0s 36ms/step - loss: 0.0026 - accuracy: 1.0000 - val_loss: 9.7985 - val_accuracy: 0.8000\n",
+      "1/1 [==============================] - 0s 29ms/step - loss: 1.4856 - accuracy: 0.9000 - val_loss: 22.9125 - val_accuracy: 0.8000\n",
       "Epoch 7/50\n",
-      "1/1 [==============================] - 0s 37ms/step - loss: 0.0046 - accuracy: 1.0000 - val_loss: 11.3226 - val_accuracy: 0.8000\n",
+      "1/1 [==============================] - 0s 32ms/step - loss: 1.0731 - accuracy: 0.9000 - val_loss: 23.0432 - val_accuracy: 0.8000\n",
       "Epoch 8/50\n",
-      "1/1 [==============================] - 0s 50ms/step - loss: 0.0107 - accuracy: 1.0000 - val_loss: 12.6186 - val_accuracy: 0.8000\n",
+      "1/1 [==============================] - 0s 31ms/step - loss: 0.6079 - accuracy: 0.9000 - val_loss: 23.1067 - val_accuracy: 0.8000\n",
       "Epoch 9/50\n",
-      "1/1 [==============================] - 0s 29ms/step - loss: 0.0190 - accuracy: 1.0000 - val_loss: 13.6981 - val_accuracy: 0.8000\n",
+      "1/1 [==============================] - 0s 49ms/step - loss: 0.1747 - accuracy: 0.9000 - val_loss: 23.0972 - val_accuracy: 0.8000\n",
       "Epoch 10/50\n",
-      "1/1 [==============================] - 0s 41ms/step - loss: 0.0143 - accuracy: 1.0000 - val_loss: 14.6146 - val_accuracy: 0.8000\n",
+      "1/1 [==============================] - 0s 41ms/step - loss: 0.0049 - accuracy: 1.0000 - val_loss: 23.0252 - val_accuracy: 0.8000\n",
       "Epoch 11/50\n",
-      "1/1 [==============================] - 0s 36ms/step - loss: 0.0058 - accuracy: 1.0000 - val_loss: 15.4227 - val_accuracy: 0.8000\n",
+      "1/1 [==============================] - 0s 59ms/step - loss: 1.2596e-04 - accuracy: 1.0000 - val_loss: 22.8798 - val_accuracy: 0.8000\n",
       "Epoch 12/50\n",
-      "1/1 [==============================] - 0s 65ms/step - loss: 0.0019 - accuracy: 1.0000 - val_loss: 16.1426 - val_accuracy: 0.8000\n",
+      "1/1 [==============================] - 0s 29ms/step - loss: 8.2609e-06 - accuracy: 1.0000 - val_loss: 22.7486 - val_accuracy: 0.8000\n",
       "Epoch 13/50\n",
-      "1/1 [==============================] - 0s 42ms/step - loss: 6.3503e-04 - accuracy: 1.0000 - val_loss: 16.7929 - val_accuracy: 0.8000\n",
+      "1/1 [==============================] - 0s 38ms/step - loss: 8.8214e-07 - accuracy: 1.0000 - val_loss: 22.6329 - val_accuracy: 0.8000\n",
       "Epoch 14/50\n",
-      "1/1 [==============================] - 0s 38ms/step - loss: 2.2831e-04 - accuracy: 1.0000 - val_loss: 17.3731 - val_accuracy: 0.8000\n",
+      "1/1 [==============================] - 0s 37ms/step - loss: 8.3446e-08 - accuracy: 1.0000 - val_loss: 22.5109 - val_accuracy: 0.8000\n",
       "Epoch 15/50\n",
-      "1/1 [==============================] - 0s 63ms/step - loss: 8.9224e-05 - accuracy: 1.0000 - val_loss: 17.9023 - val_accuracy: 0.8000\n",
+      "1/1 [==============================] - 0s 36ms/step - loss: 1.1921e-08 - accuracy: 1.0000 - val_loss: 22.3792 - val_accuracy: 0.8000\n",
       "Epoch 16/50\n",
-      "1/1 [==============================] - 0s 72ms/step - loss: 3.7425e-05 - accuracy: 1.0000 - val_loss: 18.3802 - val_accuracy: 0.8000\n",
+      "1/1 [==============================] - 0s 28ms/step - loss: 0.0000e+00 - accuracy: 1.0000 - val_loss: 22.2236 - val_accuracy: 0.8000\n",
       "Epoch 17/50\n",
-      "1/1 [==============================] - 0s 72ms/step - loss: 1.9584e-05 - accuracy: 1.0000 - val_loss: 18.8124 - val_accuracy: 0.8000\n",
+      "1/1 [==============================] - 0s 49ms/step - loss: 0.0000e+00 - accuracy: 1.0000 - val_loss: 22.0370 - val_accuracy: 0.8000\n",
       "Epoch 18/50\n",
-      "1/1 [==============================] - 0s 69ms/step - loss: 1.0979e-05 - accuracy: 1.0000 - val_loss: 19.1968 - val_accuracy: 0.8000\n",
+      "1/1 [==============================] - 0s 70ms/step - loss: 0.0000e+00 - accuracy: 1.0000 - val_loss: 21.8569 - val_accuracy: 0.8000\n",
       "Epoch 19/50\n",
-      "1/1 [==============================] - 0s 71ms/step - loss: 6.2464e-06 - accuracy: 1.0000 - val_loss: 19.5370 - val_accuracy: 0.8000\n",
+      "1/1 [==============================] - ETA: 0s - loss: 0.0000e+00 - accuracy: 1.00 - 0s 71ms/step - loss: 0.0000e+00 - accuracy: 1.0000 - val_loss: 21.6928 - val_accuracy: 0.8000\n",
       "Epoch 20/50\n",
-      "1/1 [==============================] - 0s 60ms/step - loss: 3.8027e-06 - accuracy: 1.0000 - val_loss: 19.8449 - val_accuracy: 0.8000\n",
+      "1/1 [==============================] - 0s 72ms/step - loss: 0.0000e+00 - accuracy: 1.0000 - val_loss: 21.5394 - val_accuracy: 0.8000\n",
       "Epoch 21/50\n",
-      "1/1 [==============================] - 0s 44ms/step - loss: 2.4199e-06 - accuracy: 1.0000 - val_loss: 20.1234 - val_accuracy: 0.8000\n",
+      "1/1 [==============================] - 0s 57ms/step - loss: 0.0000e+00 - accuracy: 1.0000 - val_loss: 21.3912 - val_accuracy: 0.8000\n",
       "Epoch 22/50\n",
-      "1/1 [==============================] - 0s 42ms/step - loss: 1.5855e-06 - accuracy: 1.0000 - val_loss: 20.3756 - val_accuracy: 0.8000\n",
+      "1/1 [==============================] - 0s 54ms/step - loss: 0.0000e+00 - accuracy: 1.0000 - val_loss: 21.2562 - val_accuracy: 0.8000\n",
       "Epoch 23/50\n",
-      "1/1 [==============================] - 0s 44ms/step - loss: 1.0848e-06 - accuracy: 1.0000 - val_loss: 20.6044 - val_accuracy: 0.8000\n",
+      "1/1 [==============================] - 0s 68ms/step - loss: 0.0000e+00 - accuracy: 1.0000 - val_loss: 21.1330 - val_accuracy: 0.8000\n",
       "Epoch 24/50\n",
-      "1/1 [==============================] - 0s 48ms/step - loss: 7.6294e-07 - accuracy: 1.0000 - val_loss: 20.8112 - val_accuracy: 0.8000\n",
+      "1/1 [==============================] - 0s 58ms/step - loss: 0.0000e+00 - accuracy: 1.0000 - val_loss: 21.0206 - val_accuracy: 0.8000\n",
       "Epoch 25/50\n",
-      "1/1 [==============================] - 0s 37ms/step - loss: 5.3644e-07 - accuracy: 1.0000 - val_loss: 20.9979 - val_accuracy: 0.8000\n",
+      "1/1 [==============================] - 0s 33ms/step - loss: 0.0000e+00 - accuracy: 1.0000 - val_loss: 20.9181 - val_accuracy: 0.8000\n",
       "Epoch 26/50\n",
-      "1/1 [==============================] - 0s 48ms/step - loss: 3.9339e-07 - accuracy: 1.0000 - val_loss: 21.1674 - val_accuracy: 0.8000\n",
+      "1/1 [==============================] - 0s 44ms/step - loss: 0.0000e+00 - accuracy: 1.0000 - val_loss: 20.8247 - val_accuracy: 0.8000\n",
       "Epoch 27/50\n",
-      "1/1 [==============================] - 0s 49ms/step - loss: 2.9802e-07 - accuracy: 1.0000 - val_loss: 21.3214 - val_accuracy: 0.8000\n",
+      "1/1 [==============================] - 0s 42ms/step - loss: 0.0000e+00 - accuracy: 1.0000 - val_loss: 20.7396 - val_accuracy: 0.8000\n",
       "Epoch 28/50\n",
-      "1/1 [==============================] - 0s 61ms/step - loss: 2.2650e-07 - accuracy: 1.0000 - val_loss: 21.4614 - val_accuracy: 0.8000\n",
+      "1/1 [==============================] - 0s 49ms/step - loss: 0.0000e+00 - accuracy: 1.0000 - val_loss: 20.6619 - val_accuracy: 0.8000\n",
       "Epoch 29/50\n",
-      "1/1 [==============================] - 0s 78ms/step - loss: 1.7881e-07 - accuracy: 1.0000 - val_loss: 21.5848 - val_accuracy: 0.8000\n",
+      "1/1 [==============================] - 0s 36ms/step - loss: 0.0000e+00 - accuracy: 1.0000 - val_loss: 20.5917 - val_accuracy: 0.8000\n",
       "Epoch 30/50\n",
-      "1/1 [==============================] - 0s 112ms/step - loss: 1.5497e-07 - accuracy: 1.0000 - val_loss: 21.6958 - val_accuracy: 0.8000\n",
+      "1/1 [==============================] - 0s 39ms/step - loss: 0.0000e+00 - accuracy: 1.0000 - val_loss: 20.5284 - val_accuracy: 0.8000\n",
       "Epoch 31/50\n",
-      "1/1 [==============================] - 0s 71ms/step - loss: 1.1921e-07 - accuracy: 1.0000 - val_loss: 21.7967 - val_accuracy: 0.8000\n",
+      "1/1 [==============================] - 0s 43ms/step - loss: 0.0000e+00 - accuracy: 1.0000 - val_loss: 20.4707 - val_accuracy: 0.8000\n",
       "Epoch 32/50\n",
-      "1/1 [==============================] - 0s 51ms/step - loss: 1.0729e-07 - accuracy: 1.0000 - val_loss: 21.8884 - val_accuracy: 0.8000\n",
+      "1/1 [==============================] - 0s 36ms/step - loss: 0.0000e+00 - accuracy: 1.0000 - val_loss: 20.4180 - val_accuracy: 0.8000\n",
       "Epoch 33/50\n",
-      "1/1 [==============================] - 0s 50ms/step - loss: 9.5367e-08 - accuracy: 1.0000 - val_loss: 21.9718 - val_accuracy: 0.8000\n",
+      "1/1 [==============================] - 0s 43ms/step - loss: 0.0000e+00 - accuracy: 1.0000 - val_loss: 20.3700 - val_accuracy: 0.8000\n",
       "Epoch 34/50\n",
-      "1/1 [==============================] - 0s 42ms/step - loss: 7.1526e-08 - accuracy: 1.0000 - val_loss: 22.0476 - val_accuracy: 0.8000\n",
+      "1/1 [==============================] - 0s 33ms/step - loss: 0.0000e+00 - accuracy: 1.0000 - val_loss: 20.3263 - val_accuracy: 0.8000\n",
       "Epoch 35/50\n",
-      "1/1 [==============================] - 0s 39ms/step - loss: 5.9605e-08 - accuracy: 1.0000 - val_loss: 22.1165 - val_accuracy: 0.8000\n",
+      "1/1 [==============================] - 0s 76ms/step - loss: 0.0000e+00 - accuracy: 1.0000 - val_loss: 20.2864 - val_accuracy: 0.8000\n",
       "Epoch 36/50\n",
-      "1/1 [==============================] - 0s 35ms/step - loss: 5.9605e-08 - accuracy: 1.0000 - val_loss: 22.1792 - val_accuracy: 0.8000\n",
+      "1/1 [==============================] - 0s 70ms/step - loss: 0.0000e+00 - accuracy: 1.0000 - val_loss: 20.2501 - val_accuracy: 0.8000\n",
       "Epoch 37/50\n",
-      "1/1 [==============================] - 0s 52ms/step - loss: 4.7684e-08 - accuracy: 1.0000 - val_loss: 22.2369 - val_accuracy: 0.8000\n",
+      "1/1 [==============================] - 0s 63ms/step - loss: 0.0000e+00 - accuracy: 1.0000 - val_loss: 20.2170 - val_accuracy: 0.8000\n",
       "Epoch 38/50\n",
-      "1/1 [==============================] - 0s 59ms/step - loss: 4.7684e-08 - accuracy: 1.0000 - val_loss: 22.2892 - val_accuracy: 0.8000\n",
+      "1/1 [==============================] - 0s 47ms/step - loss: 0.0000e+00 - accuracy: 1.0000 - val_loss: 20.1869 - val_accuracy: 0.8000\n",
       "Epoch 39/50\n",
-      "1/1 [==============================] - 0s 50ms/step - loss: 4.7684e-08 - accuracy: 1.0000 - val_loss: 22.3368 - val_accuracy: 0.8000\n",
+      "1/1 [==============================] - 0s 37ms/step - loss: 0.0000e+00 - accuracy: 1.0000 - val_loss: 20.1594 - val_accuracy: 0.8000\n",
       "Epoch 40/50\n",
-      "1/1 [==============================] - 0s 42ms/step - loss: 4.7684e-08 - accuracy: 1.0000 - val_loss: 22.3800 - val_accuracy: 0.8000\n",
+      "1/1 [==============================] - 0s 46ms/step - loss: 0.0000e+00 - accuracy: 1.0000 - val_loss: 20.1344 - val_accuracy: 0.8000\n",
       "Epoch 41/50\n",
-      "1/1 [==============================] - 0s 58ms/step - loss: 3.5763e-08 - accuracy: 1.0000 - val_loss: 22.4192 - val_accuracy: 0.8000\n",
+      "1/1 [==============================] - 0s 36ms/step - loss: 0.0000e+00 - accuracy: 1.0000 - val_loss: 20.1117 - val_accuracy: 0.8000\n",
       "Epoch 42/50\n",
-      "1/1 [==============================] - 0s 39ms/step - loss: 3.5763e-08 - accuracy: 1.0000 - val_loss: 22.4548 - val_accuracy: 0.8000\n",
+      "1/1 [==============================] - 0s 45ms/step - loss: 0.0000e+00 - accuracy: 1.0000 - val_loss: 20.0910 - val_accuracy: 0.8000\n",
       "Epoch 43/50\n",
-      "1/1 [==============================] - 0s 30ms/step - loss: 3.5763e-08 - accuracy: 1.0000 - val_loss: 22.4872 - val_accuracy: 0.8000\n",
+      "1/1 [==============================] - 0s 42ms/step - loss: 0.0000e+00 - accuracy: 1.0000 - val_loss: 20.0722 - val_accuracy: 0.8000\n",
       "Epoch 44/50\n",
-      "1/1 [==============================] - 0s 43ms/step - loss: 3.5763e-08 - accuracy: 1.0000 - val_loss: 22.5165 - val_accuracy: 0.8000\n",
+      "1/1 [==============================] - 0s 37ms/step - loss: 0.0000e+00 - accuracy: 1.0000 - val_loss: 20.0550 - val_accuracy: 0.8000\n",
       "Epoch 45/50\n",
-      "1/1 [==============================] - 0s 35ms/step - loss: 3.5763e-08 - accuracy: 1.0000 - val_loss: 22.5431 - val_accuracy: 0.8000\n",
+      "1/1 [==============================] - 0s 34ms/step - loss: 0.0000e+00 - accuracy: 1.0000 - val_loss: 20.0394 - val_accuracy: 0.8000\n",
       "Epoch 46/50\n",
-      "1/1 [==============================] - 0s 32ms/step - loss: 3.5763e-08 - accuracy: 1.0000 - val_loss: 22.5672 - val_accuracy: 0.8000\n",
+      "1/1 [==============================] - 0s 34ms/step - loss: 0.0000e+00 - accuracy: 1.0000 - val_loss: 20.0252 - val_accuracy: 0.8000\n",
       "Epoch 47/50\n",
-      "1/1 [==============================] - 0s 35ms/step - loss: 3.5763e-08 - accuracy: 1.0000 - val_loss: 22.5890 - val_accuracy: 0.8000\n",
+      "1/1 [==============================] - 0s 28ms/step - loss: 0.0000e+00 - accuracy: 1.0000 - val_loss: 20.0123 - val_accuracy: 0.8000\n",
       "Epoch 48/50\n",
-      "1/1 [==============================] - 0s 30ms/step - loss: 2.3842e-08 - accuracy: 1.0000 - val_loss: 22.6089 - val_accuracy: 0.8000\n",
+      "1/1 [==============================] - 0s 36ms/step - loss: 0.0000e+00 - accuracy: 1.0000 - val_loss: 20.0006 - val_accuracy: 0.8000\n",
       "Epoch 49/50\n",
-      "1/1 [==============================] - 0s 37ms/step - loss: 2.3842e-08 - accuracy: 1.0000 - val_loss: 22.6268 - val_accuracy: 0.8000\n",
+      "1/1 [==============================] - 0s 38ms/step - loss: 0.0000e+00 - accuracy: 1.0000 - val_loss: 19.9899 - val_accuracy: 0.8000\n",
       "Epoch 50/50\n",
-      "1/1 [==============================] - 0s 31ms/step - loss: 1.1921e-08 - accuracy: 1.0000 - val_loss: 22.6431 - val_accuracy: 0.8000\n"
+      "1/1 [==============================] - 0s 29ms/step - loss: 0.0000e+00 - accuracy: 1.0000 - val_loss: 19.9803 - val_accuracy: 0.8000\n"
      ]
     },
     {
      "data": {
       "text/plain": [
-       "<tensorflow.python.keras.callbacks.History at 0x7f900d53c5c0>"
+       "<tensorflow.python.keras.callbacks.History at 0x7fcf1c3d6668>"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -256,7 +256,9 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "y_predict = model.predict(X)"
+   ]
   }
  ],
  "metadata": {
